--- a/config.toml
+++ b/config.toml
@@ -15,9 +15,9 @@ enableMissingTranslationPlaceholders = false
 [params]
 
     # Source Code repository section
-    description = "put your description"
-    github_repository = "https://github.com/thingsym/hugo-theme-techdoc"
-    version = "0.9.3"
+    # description = "put your description"
+    # github_repository = "https://github.com/thingsym/hugo-theme-techdoc"
+    # version = "0.9.3"
 
     # Documentation repository section
     # documentation repository (set edit link to documentation repository)
@@ -39,7 +39,7 @@ enableMissingTranslationPlaceholders = false
     # Theme color
     # See color value reference https://developer.mozilla.org/en-US/docs/Web/CSS/color
     custom_font_color = ""
-    custom_background_color = ""
+    custom_background_color = "royalblue"
 
     # Documentation Menu section
     # Menu style settings
